fix add text interpolation click event and keyup event

--- a/src/app/empleado/empleado.component.html
+++ b/src/app/empleado/empleado.component.html
@@ -1,4 +1,4 @@
-<label for="nombre">Introduce el nombre del empleado:</label>
+<!--<label for="nombre">Introduce el nombre del empleado:</label>
 <input type="text" name="nombre" id="nombre" #nombre>
 <input type="button" value="Enter" (click)="ingresarNombre(nombre.value)">
 <br>
@@ -13,7 +13,7 @@
 <label for="empresa">Introduce la empresa del empleado:</label>
 <input type="text" name="empresa" id="empresa" #empresa>
 <input type="button" value="Enter" (click)="ingresarEmpresa(empresa.value)">
-<br>
+<br>-->
 
 <label for="nombre">Introduce el nombre del empleado:</label>
 <input type="text" name="nombre" id="nombre" #nombre (keyup)="0">
